INCLUDE_DIRECTORIES(${DISTRIBUTED_INCLUDE_DIR} ${DISTRIBUTED_SOURCE_DIR} ${FLEXARRAY_INCLUDE_DIR})

SET(LINK_LIBRARIES parallelMT)

ADD_EXECUTABLE(generateData  generateData.cpp)   

ADD_EXECUTABLE(extractBlocks  extractBlocks.cpp)   
TARGET_LINK_LIBRARIES(extractBlocks ${LINK_LIBRARIES})

INSTALL(TARGETS  extractBlocks generateData
        ARCHIVE DESTINATION ${PROJECT_INSTALL_PREFIX}/lib
        LIBRARY DESTINATION ${PROJECT_INSTALL_PREFIX}/lib
        RUNTIME DESTINATION ${PROJECT_INSTALL_PREFIX}/bin
)

